--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+{
     margin: 0;
     padding: 0;
 }
@@ -6,12 +6,12 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
+    background-color: #782222;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 24px 0;
+    padding: 20px 0;
 }
 
 .cabecalho-imagem{
@@ -21,7 +21,6 @@ body {
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 16px;
 }
 
 .escola-imagem{
@@ -29,8 +28,8 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
-    color:white;
+    
+    color:rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,7 +49,7 @@ body {
     padding: 24px 0;
 }
 .estudante-imagem{
-    width: 20px;
+    width: 120px;
 }
 
 .estudante-icone{
@@ -65,12 +64,12 @@ body {
 
 .estudante-titulo{
     text-align: center;
-    padding: 30px 0;
+    padding: 50px 0;
 }
 
 .estudante-todos{
     display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
 .rodape{
@@ -79,8 +78,9 @@ body {
 }
 
 .rodape-imagem{
-    height: 15px;
-    padding: 6px 0;
+    height: 60px;
+    padding: 12px 0;
    
 }
+
 
